# go

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: board.rs  config.rs  flood_fill.rs  game.rs  main.rs  rules.rs  sgf.rs  state.rs  tree.rs  util.rs
src/sgf/: action.rs  error.rs  mod.rs  parse.rs  util.rs
src/ui/: board.rs  debug.rs  editor.rs  file.rs  markup.rs  mod.rs  sgf.rs  shapes.rs  tool.rs
