[package]
name = "go"
description = "Go/Baduk/Weiqi client"
keywords = ["Go", "Baduk", "Weiqi", "Board Game"]
repository = "https://github.com/ottobrown/go"
license = "MIT"
version = "0.3.0"
readme = "README.md"
edition = "2021"

[dependencies]
eframe = "0.18.0"
egui = { version="0.18.0", features=["serde"] }
fxhash = "0.2.1"
confy = "0.4.0"
serde = { version="1.0.137", features=["derive"] }
