[package]
name = "go"
description = "Go/Baduk/Weiqi client"
keywords = ["Go", "Baduk", "Weiqi", "Board Game"]
repository = "https://github.com/ottobrown/go"
license = "MIT"
version = "0.4.0"
readme = "README.md"
edition = "2021"

[dependencies]
eframe = "0.18.0"
fxhash = "0.2.1"
sgf-parser = { git = "https://github.com/ottobrown/sgf-parser.git", branch = "master" }
rfd = "0.9.1"
